--- a/Relazione MAS/main.tex
+++ b/Relazione MAS/main.tex
@@ -74,8 +74,8 @@
 	\newpage
 
 \section{Agenti \& Targets}
-	
 	\subsection{Il Meccanismo d'Asta}
+	\input{asta}
 	\subsection{Comportamento degli Agenti}
 	\input{agenti}
 	\subsection{Comportamento dei Targets}
