--- a/Relazione MAS/targets.tex
+++ b/Relazione MAS/targets.tex
@@ -5,4 +5,4 @@ I targets hanno un comportamento molto semplice: appaiono in maniera casuale nel
 	\item calcolo della destinazione,
 	\item raggiungimento della destinazione.
 \end{itemize}
-Al primo passo, viene scelto una locazione a caso fra quelle appartenenti alle stanze diverse rispetto a quella in cui si trova attualmente il target, e viene impostata come destinazione. I target raggiungono la loro destinazione un passo alla volta: ogni passo differisce dall'altro di un periodo di tempo prefissato.
+Al primo passo, viene scelto una locazione a caso fra quelle appartenenti alle stanze diverse rispetto a quella in cui si trova attualmente il target, e viene impostata come destinazione. I target raggiungono la loro destinazione un passo alla volta: ogni passo differisce dall'altro di un periodo di tempo prefissato. Una volta raggiunta la destinazione, tale procedimento viene reiterato.
