--- a/Relazione MAS/intro.tex
+++ b/Relazione MAS/intro.tex
@@ -12,6 +12,6 @@ La figura seguente mostra l'interfaccia grafica dell'applicazione.
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.5\linewidth]{mappa}
-	\caption{Interfaccia grafica dell'applicazione in cui è visibile un target.}
+	\caption{Interfaccia grafica dell'applicazione in cui è visibile un target e i sedici agenti.}
 	\label{fig:mappa}
 \end{figure}
