--- a/Relazione MAS/main.tex
+++ b/Relazione MAS/main.tex
@@ -73,20 +73,17 @@
 	
 	\newpage
 
-\section{Agenti \& Targets}
+\section{Agenti e Target}
 	\subsection{Il Meccanismo d'Asta}
 	\input{asta}
 	\subsection{Comportamento degli Agenti}
 	\input{agenti}
-	\subsection{Comportamento dei Targets}
+	\subsection{Comportamento dei Target}
 	\input{targets}
 	
 	\newpage
 	
 \section{Risultati}
-
-
-
-
+\input{risultati}
 
 \end{document}
