--- a/Relazione MAS/titlePage.tex
+++ b/Relazione MAS/titlePage.tex
@@ -12,9 +12,9 @@
 	
 	\par\bigskip\par\bigskip\par\bigskip\par\bigskip\par\bigskip\par\bigskip\par\bigskip\par	% Per spazi
 	
-	{\LARGE Marco Matarese N97/0000280\\}
-	{\LARGE Flavio Bizzarri N97/0000281\\}
-	{\LARGE Riccardo Grieco N97/0000286\\}
+	{\LARGE Marco Matarese N97/280\\}
+	{\LARGE Flavio Bizzarri N97/281\\}
+	{\LARGE Riccardo Grieco N97/286\\}
 	
 	\par\bigskip\par\bigskip\par\bigskip\par\bigskip\par\bigskip\par\bigskip	% Per spazi
 	
