--- a/Relazione MAS/intro.tex
+++ b/Relazione MAS/intro.tex
@@ -1,6 +1,6 @@
 %		** INTRODUZIONE **
 
-Il presente progetto si prefige como scopo quello di realizzare un sistema multi-agente per il tracciamento di target in movimento in ambiente chiuso. Gli agenti previsti sono equiparabili a telecamere, le quali hanno un numero di funzioni limitate. Lo scopo principale degli agenti è quello di tenere i target tracciati il più possibile, per questo viene permesso loro di "passarsi" i target quando questi si allontanano dalla loro area di visione. L'applicazione è perzonalizzabile tramite file di configurazione, i quali permettono di specificare:
+Il presente progetto si prefige como scopo quello di realizzare un sistema multi-agente per il tracciamento di target in movimento in ambiente chiuso. Gli agenti previsti sono equiparabili a telecamere, le quali hanno un numero di funzioni limitate. Lo scopo principale degli agenti è quello di tenere i target tracciati il più possibile, per questo viene permesso loro di "passarsi" i target quando questi si allontanano dalla loro area di visione. L'applicazione è personalizzabile tramite file di configurazione, i quali permettono di specificare:
 \begin{itemize}
 	\item l'ambiente, tramite sua rappresentazione matriciale,
 	\item le stanze, definite come rettangoli,
